--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
     <svg id="eraser" class="icon" aria-hidden="true">
         <use xlink:href="#icon-eraser"></use>
     </svg>
+    <svg id="clear" class="icon" aria-hidden="true">
+        <use xlink:href="#icon-shanchu"></use>
+    </svg>
+    <svg id="save" class="icon" aria-hidden="true">
+        <use xlink:href="#icon-save"></use>
+    </svg>
 </div>
 <ul class="colors">
     <li id="black" class="black active"></li>
@@ -31,7 +37,11 @@
     <li id="blue" class="blue"></li>
     <li id="green" class="green"></li>
 </ul>
+<ul class="sizes">
+    <li id="thin" class="thin active"></li>
+    <li id="thick" class="thick"></li>
+</ul>
 <script src="./js/main.js"></script>
-<script src="//at.alicdn.com/t/font_624977_6si4tdiz7tvmfgvi.js"></script>
+<script src="//at.alicdn.com/t/font_624977_10arr29gi9q9f6r.js"></script>
 </body>
 </html>
